doc/src/css/style.css
/* ... */
.article .operators table td:first-child { text-align: center; width: 3rem; }
.article .data-type-operators table td:first-child { width: 7rem; }
.article .data-type-operators table td:last-child { word-spacing: .5rem; }
.article .data-type-false table td:first-child { width: 6rem; }
.article .assignments table td:first-child { width: 7rem; }

.article .api-spec { border-bottom: 1px solid #d8dee4; padding: 40px 0; }
.article h1 + .api-spec { padding-top: 0; }
.article .api-spec:first-of-type { margin-top: 0; }
.article .api-spec .spec { align-items: start; box-sizing: border-box; column-gap: min(3rem, 5vw); display: grid; grid-template-columns: repeat(2, 1fr); row-gap: 2.5vw; }
.article .api-spec .spec > :nth-child(2) { box-sizing: border-box; display: flex; flex-direction: column; gap: 16px; position: sticky; top: 10px; }

.article .api-spec .endpoints-box { border-radius: 10px; border: 1px solid #d8dee4; background: #f5f6f8; font-size: .9em; width: 100%; }
.article .api-spec .endpoints-box > :nth-child(1) { background: #ebeef1; border-bottom: 1px solid #d8dee4; border-top-left-radius: 10px; border-top-right-radius: 10px; text-transform: uppercase; font-size: .8em; padding: 10px 12px; font-weight: bold; width: 100%; }
.article .api-spec .endpoints-box > ul { list-style: none; flex-direction: column; align-items: stretch; justify-content: normal; display: flex; font-family: Courier New, Courier, monospace; padding-left: 20px; }
.article .api-spec .endpoints-box > ul > li { line-height: 1.8; }
.article .api-spec .endpoints-box > ul a { color: #333; }
.article .api-spec .endpoints-box > ul a > span { display: inline-block; text-align: right; width: 50px; }
.article .api-spec .endpoints-box > ul a > span.api-method-get { color: #045AD0; }
.article .api-spec .endpoints-box > ul a > span.api-method-post { color: #217005; }
.article .api-spec .endpoints-box > ul a > span.api-method-put { color: #7A2D91; }
.article .api-spec .endpoints-box > ul a > span.api-method-delete { color: #B13600; }

.article .api-spec .api-request-box { border-radius: 10px; display: flex; flex-direction: column; font-size: .9em; overflow: hidden; width: 100%; }
.article .api-spec .api-request-box > :nth-child(1) { align-items: center; background: #505865; color: #fff; display: flex; font-family: Courier New, Courier, monospace; font-size: .9em; justify-content: space-between; padding: 12px 12px 8px 12px; width: 100%; }
.article .api-spec .api-request-box > :nth-child(1)  span.api-method-get { color: #4ABCF9; }
.article .api-spec .api-request-box > :nth-child(1) span.api-method-post { color: #4BCA2E; }
.article .api-spec .api-request-box > :nth-child(1) span.api-method-put { color: #C084FF; }
.article .api-spec .api-request-box > :nth-child(1) span.api-method-delete { color: #FF9926; }
.article .api-spec .api-request-box > :nth-child(2) { background: #3e444f; border-radius: 0; color: #fff; counter-reset: fence-line-counter; font-family: Courier New, Courier, monospace; font-size: 14px; padding: 8px 20px 8px 20px; }
.article .api-spec .api-request-box > :nth-child(2) > div::before { color: #A9B2C2; content: counter(fence-line-counter); counter-increment: fence-line-counter 1; display: inline-block; padding-right: 12px; text-align: right; width: 20px; }
.article .api-spec .api-request-box .copy-request { cursor: pointer; float: right; }
.article .api-spec .api-request-box code { overflow-x: scroll; white-space: nowrap; width: 457px; }
.article .api-spec .api-request-box span { color: #4BCA2E; }

.article .api-spec .api-response-box { border: 1px solid #d8dee4; border-radius: 10px; flex-direction: column; font-size: .9em; overflow: hidden; width: 100%; }
.article .api-spec .api-response-box > :nth-child(1) { background: #ebeef1; border-bottom: 1px solid #d8dee4; color: #353A44; font-size: .9em; font-weight: bold; padding: 10px 12px; text-transform: uppercase; width: 100%; }
.article .api-spec .api-response-box > :nth-child(2) pre { margin: 0; padding: 0; }
.article .api-spec .api-response-box > :nth-child(2) pre code { background: #f5f6f8; color: #353A44; font-family: Courier New, Courier, monospace; font-size: 14px; padding: 8px 20px 8px 20px; width: 455px; white-space: pre; }

.article .api-spec .api-errors-box { border: 1px solid #d8dee4; border-radius: 10px; flex-direction: column; font-size: .9em; width: 100%; }
.article .api-spec .api-errors-box > :nth-child(1) { background: #ebeef1; border-bottom: 1px solid #d8dee4; border-top-left-radius: 10px; border-top-right-radius: 10px; color: #353A44; font-size: .9em; font-weight: bold; padding: 10px 12px; text-transform: uppercase; width: 100%; }
.article .api-spec .api-errors-box > :nth-child(2) { background: #f5f6f8; color: #4A515C; display: grid; font-size: 14px; gap: 8px; grid-template-columns: auto 1fr; padding: 8px 20px 8px 20px; }
.article .api-spec .api-errors-box > :nth-child(2) .row { cursor: pointer; display: contents; }
.article .api-spec .api-errors-box > :nth-child(2) .status[data-status="404"] { color: #D66E00; }
.article .api-spec .api-errors-box > :nth-child(2) .status[data-status="422"] { color: #B13600; }
.article .api-spec .api-errors-box > :nth-child(2) .status[data-status="503"] { color: #7F1D00; }
.article .api-spec .api-errors-box > :nth-child(2) .message { position: relative; }
.article .api-spec .api-errors-box > :nth-child(2) .message::first-letter { text-transform: uppercase; }
.article .api-spec .api-errors-box > :nth-child(2) .message::after { color: #4A515C; content: '▼'; font-size: 10px; position: absolute; right: 0; top: 3px; transition: transform 0.3s ease; }
.article .api-spec .api-errors-box > :nth-child(2) .json-body { font-size: 13px; grid-column: span 2; }
.article .api-spec .api-errors-box > :nth-child(2) .json-body pre { background: #fafbfc; border: 1px solid #eaecef; border-radius: 10px; cursor: text; font-size: 11px; margin: 0; padding: 1em; white-space: pre-wrap; word-wrap: break-word; max-width: 100%; }
/* ... */

